<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".completeOrdersDetails"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="351dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nic"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/name" />

    <TextView
        android:id="@+id/norder"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/nic" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="92dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="92dp"
        app:layout_constraintBottom_toBottomOf="@+id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginBottom="101dp"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:layout_marginTop="101dp"
        app:layout_constraintBottom_toBottomOf="@+id/bill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginBottom="49dp"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:layout_marginTop="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/bill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/date" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="Cust-Name:"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="73dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="17dp"
        android:text="Fuel:"
        app:layout_constraintEnd_toStartOf="@+id/nic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="33dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="18dp"
        android:text="@string/order_id"
        app:layout_constraintEnd_toStartOf="@+id/norder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="Customer Pho:"
        app:layout_constraintEnd_toStartOf="@+id/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/date_and_time"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Cust-Address:"
        app:layout_constraintEnd_toStartOf="@+id/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/bill"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="223dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="223dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="45dp"
        android:text="@string/total_bill"
        app:layout_constraintBottom_toBottomOf="@+id/bill"
        app:layout_constraintEnd_toStartOf="@+id/bill"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="61dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="30dp"
        android:text="Boy_id"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/bill" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:background="@drawable/ripple_effect"
        android:text="Map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/name" />
</android.support.constraint.ConstraintLayout>